Revert "Performance analysis: Forward pass allocates 7.2 MB/token, lacks KV-cache"

--- a/benchmarks/SimdBenchmarks.csproj
+++ b/benchmarks/SimdBenchmarks.csproj
@@ -15,9 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- Exclude TokenizerPerf and TrainingBenchmark subdirectories from compilation -->
+    <!-- Exclude TokenizerPerf subdirectory from compilation -->
     <Compile Remove="TokenizerPerf/**/*.cs" />
-    <Compile Remove="TrainingBenchmark/**/*.cs" />
   </ItemGroup>
 
 </Project>
