--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,18 @@
 name: Build and Test
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  push:
+    branches: [ main ]
   schedule:
     # Run nightly at 2 AM UTC
     - cron: '0 2 * * *'
+
+# Prevent CI pileups. Keep only the latest run per branch/PR ref.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   checks: write
@@ -16,55 +21,88 @@ permissions:
 
 jobs:
   build-and-test:
+    name: Build + Unit/Integration Tests
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '10.0.x'
-    
-    - name: Restore dependencies
-      run: dotnet restore
-    
-    - name: Build
-      run: dotnet build --no-restore --configuration Release
-    
-    - name: Run Unit Tests
-      run: dotnet test tests/SmallMind.Tests/SmallMind.Tests.csproj --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=unit-tests.trx"
-    
-    - name: Run Integration Tests
-      run: dotnet test tests/SmallMind.IntegrationTests/SmallMind.IntegrationTests.csproj --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=integration-tests.trx"
-    
-    - name: Run Performance Tests
-      if: github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'performance')
-      env:
-        RUN_PERF_TESTS: 'true'
-      run: dotnet test tests/SmallMind.PerfTests/SmallMind.PerfTests.csproj --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=perf-tests.trx"
-    
-    - name: Run SIMD Benchmarks
-      if: github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'performance')
-      run: |
-        cd benchmarks
-        dotnet run --configuration Release --no-build
-    
-    - name: Upload Benchmark Results
-      if: github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'performance')
-      uses: actions/upload-artifact@v4
-      with:
-        name: benchmark-results
-        path: |
-          benchmarks/benchmark-results.md
-          benchmarks/benchmark-results.json
-        retention-days: 30
-    
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
-      with:
-        files: |
-          **/*.trx
-        check_name: Test Results
-        comment_mode: off
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '10.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build (Release)
+        run: dotnet build --no-restore --configuration Release
+
+      - name: Run Unit Tests
+        run: dotnet test tests/SmallMind.Tests/SmallMind.Tests.csproj --configuration Release --verbosity normal --logger "trx;LogFileName=unit-tests.trx"
+
+      - name: Run Integration Tests
+        run: dotnet test tests/SmallMind.IntegrationTests/SmallMind.IntegrationTests.csproj --configuration Release --verbosity normal --logger "trx;LogFileName=integration-tests.trx"
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            **/*.trx
+          check_name: Test Results
+          comment_mode: off
+
+  perf-and-benchmarks:
+    name: Perf Tests + Benchmarks (nightly or PR label)
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    # Run on nightly schedule OR when PR has a "performance" label
+    if: |
+      github.event_name == 'schedule' ||
+      (github.event_name == 'pull_request' && contains(toJson(github.event.pull_request.labels), '"name":"performance"'))
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '10.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build (Release)
+        run: dotnet build --no-restore --configuration Release
+
+      - name: Run Performance Tests
+        env:
+          RUN_PERF_TESTS: 'true'
+        run: dotnet test tests/SmallMind.PerfTests/SmallMind.PerfTests.csproj --configuration Release --verbosity normal --logger "trx;LogFileName=perf-tests.trx"
+
+      - name: Run SIMD Benchmarks
+        run: |
+          cd benchmarks
+          dotnet run --configuration Release
+
+      - name: Upload Benchmark Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-results
+          path: |
+            benchmarks/benchmark-results.md
+            benchmarks/benchmark-results.json
+          retention-days: 30
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            **/*.trx
+          check_name: Perf & Benchmark Results
+          comment_mode: off
